Added Grover Search Algorithm and Random bit Algorithm